--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemon": "^1.19.6",
+    "@types/pug": "^2.0.10",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
@@ -23,11 +25,17 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
+    "html-to-image": "^1.11.11",
+    "html-to-text": "^9.0.5",
     "ioredis": "^5.3.2",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pg": "^8.4.0",
-    "redis": "^4.1.0",
+    "pug": "^3.0.2",
+    "puppeteer": "^22.8.0",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.20",
     "wbm": "^1.1.16",
@@ -39,9 +47,11 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.15",
     "morgan": "^1.10.0",
     "ts-node": "10.9.1",
     "ts-node-dev": "^1.1.8",
